--- a/src/main/resources/webapp/admin/static/pkg/all.css
+++ b/src/main/resources/webapp/admin/static/pkg/all.css
@@ -1,3 +1,67 @@
+/*!/components/component/loading/loading.css*/
+.layui-layer-shade {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
+
+.layui-layer-shade, .layui-layer {
+  position: fixed;
+  _position: absolute;
+  pointer-events: auto; }
+
+.layui-layer-loading {
+  border-radius: 100%;
+  background: none;
+  box-shadow: none;
+  border: none; }
+
+.layui-layer {
+  top: 150px;
+  left: 50%;
+  margin: 0;
+  padding: 0;
+  -webkit-background-clip: content; }
+
+.layui-layer-shade, .layui-layer {
+  position: fixed;
+  _position: absolute;
+  pointer-events: auto; }
+
+.layui-layer-loading .layui-layer-loading1 {
+  width: 37px;
+  height: 37px;
+  background: url(/static/images/loading-1.gif) no-repeat; }
+
+.layui-layer-loading .layui-layer-content {
+  width: 60px;
+  height: 60px;
+  background: url(/static/images/loading-1.gif) no-repeat; }
+
+.layui-layer-content {
+  position: relative; }
+
+.layui-layer-setwin {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  font-size: 0;
+  line-height: initial; }
+
+/*# sourceMappingURL=loading.css.map */
+
+/*!/components/page/order/order.css*/
+.dateBlock {
+  text-align: center; }
+
+.dateActive {
+  padding-left: 0;
+  padding-right: 0;
+  background-color: #00AAEE;
+  font-weight: bold; }
+
+/*# sourceMappingURL=order.css.map */
+
 /*!/components/page/home/home.css*/
 body {
   background-color: #f2f9fd; }
@@ -1348,17 +1412,55 @@ a:focus,a:hover{color:#09c;} /*链接-悬浮颜色*/
 {color:#333;border-color:#3bc;background-color:#3bc;} /*融合-文本色-边框-背景*/
 .button.border-dot:hover,.button.border-dot:focus,.button.bg-dot:hover,.button.bg-dot:focus
 {color:#fff;border-color:#f00;background-color:#f00;} /*点缀色-文本-边框-背景*/
-/*!/components/page/order/order.css*/
-.dateBlock {
-  text-align: center; }
+/*!/components/component/loading/loading.scss*/
+.layui-layer-shade {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
 
-.dateActive {
-  padding-left: 0;
-  padding-right: 0;
-  background-color: #00AAEE;
-  font-weight: bold; }
+.layui-layer-shade, .layui-layer {
+  position: fixed;
+  _position: absolute;
+  pointer-events: auto; }
 
-/*# sourceMappingURL=order.css.map */
+.layui-layer-loading {
+  border-radius: 100%;
+  background: none;
+  box-shadow: none;
+  border: none; }
+
+.layui-layer {
+  top: 150px;
+  left: 50%;
+  margin: 0;
+  padding: 0;
+  -webkit-background-clip: content; }
+
+.layui-layer-shade, .layui-layer {
+  position: fixed;
+  _position: absolute;
+  pointer-events: auto; }
+
+.layui-layer-loading .layui-layer-loading1 {
+  width: 37px;
+  height: 37px;
+  background: url(/static/images/loading-1.gif) no-repeat; }
+
+.layui-layer-loading .layui-layer-content {
+  width: 60px;
+  height: 60px;
+  background: url(/static/images/loading-1.gif) no-repeat; }
+
+.layui-layer-content {
+  position: relative; }
+
+.layui-layer-setwin {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  font-size: 0;
+  line-height: initial; }
 
 /*!/components/page/order/order.scss*/
 .dateBlock {
@@ -1369,6 +1471,82 @@ a:focus,a:hover{color:#09c;} /*链接-悬浮颜色*/
   padding-right: 0;
   background-color: #00AAEE;
   font-weight: bold; }
+
+/*!/components/page/seat/seat.css*/
+.page-seat .seat-container {
+  padding-top: 10px;
+  padding-bottom: 10px; }
+  .page-seat .seat-container .bus-info {
+    text-align: center;
+    padding-bottom: 10px;
+    font-size: 20px;
+    color: #666;
+    text-shadow: 1px 1px 1px #0099CC; }
+  .page-seat .seat-container table {
+    margin: 0 auto; }
+    .page-seat .seat-container table tr td {
+      height: 100px;
+      width: 100px;
+      padding-right: 6px;
+      padding-bottom: 5px; }
+      .page-seat .seat-container table tr td a {
+        border-radius: 5px;
+        border: solid 1px #ddd;
+        background-color: #f5f5f5;
+        display: block;
+        text-align: center;
+        height: 100%;
+        padding: 0 5px; }
+      .page-seat .seat-container table tr td a:hover {
+        background-color: #0a8;
+        cursor: pointer;
+        color: #fff; }
+        .page-seat .seat-container table tr td a:hover h3 {
+          color: #fff; }
+      .page-seat .seat-container table tr td h3 {
+        font-size: 32px;
+        color: #0099CC;
+        font-weight: bold;
+        line-height: 50px; }
+
+/*# sourceMappingURL=seat.css.map */
+
+/*!/components/page/seat/seat.scss*/
+.page-seat .seat-container {
+  padding-top: 10px;
+  padding-bottom: 10px; }
+  .page-seat .seat-container .bus-info {
+    text-align: center;
+    padding-bottom: 10px;
+    font-size: 20px;
+    color: #666;
+    text-shadow: 1px 1px 1px #0099CC; }
+  .page-seat .seat-container table {
+    margin: 0 auto; }
+    .page-seat .seat-container table tr td {
+      height: 100px;
+      width: 100px;
+      padding-right: 6px;
+      padding-bottom: 5px; }
+      .page-seat .seat-container table tr td a {
+        border-radius: 5px;
+        border: solid 1px #ddd;
+        background-color: #f5f5f5;
+        display: block;
+        text-align: center;
+        height: 100%;
+        padding: 0 5px; }
+      .page-seat .seat-container table tr td a:hover {
+        background-color: #0a8;
+        cursor: pointer;
+        color: #fff; }
+        .page-seat .seat-container table tr td a:hover h3 {
+          color: #fff; }
+      .page-seat .seat-container table tr td h3 {
+        font-size: 32px;
+        color: #0099CC;
+        font-weight: bold;
+        line-height: 50px; }
 
 /*!/static/css/style.css*/
 @-webkit-keyframes slideInDown {
@@ -1416,6 +1594,9 @@ a:focus,a:hover{color:#09c;} /*链接-悬浮颜色*/
 
 .slideInDown-leave {
   display: none; }
+
+.button {
+  transition: none !important; }
 
 /*# sourceMappingURL=style.css.map */
 
@@ -1471,3 +1652,6 @@ a:focus,a:hover{color:#09c;} /*链接-悬浮颜色*/
 
 .slideInDown-leave {
   display: none; }
+
+.button {
+  transition: none !important; }
