前端管理最新

--- a/src/main/resources/webapp/static/components/page/service/service.html
+++ b/src/main/resources/webapp/static/components/page/service/service.html
@@ -9,7 +9,7 @@
             <ul class="mui-table-view mui-list">
                 <i class=" mui-pull-left iconfont icon-tuangou"></i>
                 <li class="mui-table-view-cell">
-                    <a class="mui-navigate-right">团购
+                    <a class="mui-navigate-right" href="#company">承包商订位
                     </a>
                 </li>
             </ul>
