--- a/src/main/resources/webapp/static/pkg/all.css
+++ b/src/main/resources/webapp/static/pkg/all.css
@@ -48,7 +48,7 @@
       background-image: url("/static/images/red.png");
       color: #fff; }
 
-/*# sourceMappingURL=car.css.map */
+/*# sourceMappingURL=bus.css.map */
 
 /*!/components/page/search/result/result.scss*/
 .page-search-result .time-nav {
