--- a/src/main/resources/webapp/static/components/page/search/result/result.html
+++ b/src/main/resources/webapp/static/components/page/search/result/result.html
@@ -8,7 +8,7 @@
 
     <div class="mui-content">
         <h5 class="mui-content-padded">
-            {{result.length}}车次
+            {{result.length}}/{{result.length}}车次
         </h5>
         <ul class="mui-table-view">
             <li class="mui-table-view-cell" v-repeat="r in result">
