--- a/src/main/resources/webapp/static/components/page/search/search.html
+++ b/src/main/resources/webapp/static/components/page/search/search.html
@@ -25,7 +25,7 @@
                 </li>
             </ul>
 
-            <button class="mui-btn mui-btn-block" id="btn-search" v-on="click:onClick('search/result')" >
+            <button class="mui-btn mui-btn-block" id="btn-search" v-on="click:onSearch()" >
                 <span class="mui-icon mui-icon-search"></span>查询
             </button>
         </div>
