--- a/src/main/resources/webapp/static/components/page/config/config.html
+++ b/src/main/resources/webapp/static/components/page/config/config.html
@@ -9,8 +9,9 @@
             <ul class="mui-table-view mui-list">
                 <i class=" mui-pull-left iconfont icon-user"></i>
                 <li class="mui-table-view-cell">
-                    <a class="mui-navigate-right" href="#bind" >
-                        绑定用户
+                    <a >
+                        {{mine.email}}111
+                        <button v-on="tap:unBind" class="mui-btn mui-btn-danger">解绑</button>
                     </a>
                 </li>
             </ul>
