--- a/src/main/resources/webapp/static/css/style.css
+++ b/src/main/resources/webapp/static/css/style.css
@@ -98,7 +98,7 @@ html, body {
   position: absolute;
   z-index: 1; }
 
-.iconfont + .mui-table-view-cell > .mui-navigate-right {
+.iconfont + .mui-table-view-cell > a {
   padding-left: 45px; }
 
 .icon-target:before {
