--- a/src/main/resources/webapp/static/components/page/config/config.html
+++ b/src/main/resources/webapp/static/components/page/config/config.html
@@ -10,7 +10,7 @@
                 <i class=" mui-pull-left iconfont icon-user"></i>
                 <li class="mui-table-view-cell">
                     <a >
-                        {{mine.email}}111
+                        {{mine.email}}
                         <button v-on="tap:unBind" class="mui-btn mui-btn-danger">解绑</button>
                     </a>
                 </li>
