--- a/src/main/resources/webapp/static/components/page/search/result/result.html
+++ b/src/main/resources/webapp/static/components/page/search/result/result.html
@@ -17,7 +17,7 @@
                         {{r.name}} {{r.whither}}
                     </h4>
                     <p>{{r.date}}</p>
-                    <h5>
+                    <h5 style="color: #000">
                         空座：{{r.void}} 预订：{{r.order}} 全部：{{r.void + r.order}}
                     </h5>
                 </a>
