--- a/src/main/resources/webapp/static/components/page/bus/bus.html
+++ b/src/main/resources/webapp/static/components/page/bus/bus.html
@@ -3,6 +3,7 @@
         <h5 class="mui-title">{{bus.name}}({{bus.sn}})
         </h5>
         <a class="mui-icon mui-icon-arrowleft mui-pull-left" href="#/search/result"></a>
+        <a class="mui-icon mui-icon-home-filled mui-pull-right" href="#/search"></a>
     </header>
     <div class="mui-content">
         <ul class="mui-table-view" style="margin-top: 0">
