--- a/src/main/resources/webapp/static/components/page/order/order.html
+++ b/src/main/resources/webapp/static/components/page/order/order.html
@@ -17,7 +17,7 @@
                     <h5 style="color: #000;">
                         {{o.user.name}}：{{o.seat.sn}}号座位
                     </h5>
-                    <button class="mui-btn" v-on="tap:unSub(o)">
+                    <button class="mui-btn mui-btn-negative" v-on="tap:unSub(o)">
                         退订
                     </button>
                 </li>
