--- a/src/main/resources/webapp/static/components/page/order/order.html
+++ b/src/main/resources/webapp/static/components/page/order/order.html
@@ -6,22 +6,24 @@
             </h5>
             <a class="mui-icon mui-icon-refresh mui-pull-right" v-on="tap:reload"></a>
         </header>
-        <div class="mui-content">
-            <h5 style="padding-left: 15px;">订单</h5>
-            <ul class="mui-table-view mui-list">
-                <li class="mui-table-view-cell" v-repeat="o in order">
-                    <h4>
-                        {{o.bus.name}} {{o.bus.destination}}
-                    </h4>
-                    <p>{{o.date}} {{o.bus.goff}}</p>
-                    <h5 style="color: #000;">
-                        {{o.user.name}}：{{o.seat.sn}}号座位
-                    </h5>
-                    <button class="mui-btn mui-btn-negative" v-on="tap:unSub(o)">
-                        退订
-                    </button>
-                </li>
-            </ul>
+        <div class="mui-content mui-scroll-wrapper">
+            <div class="mui-scroll">
+                <h5 style="padding-left: 15px;">订单</h5>
+                <ul class="mui-table-view mui-list">
+                    <li class="mui-table-view-cell" v-repeat="o in order">
+                        <h4>
+                            {{o.bus.name}} {{o.bus.destination}}
+                        </h4>
+                        <p>{{o.date}} {{o.bus.goff}}</p>
+                        <h5 style="color: #000;">
+                            {{o.user.name}}：{{o.seat.sn}}号座位
+                        </h5>
+                        <button class="mui-btn mui-btn-negative" v-on="tap:unSub(o)">
+                            退订
+                        </button>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
     <c-nav view="order">
