--- a/src/main/resources/webapp/static/components/page/order/order.html
+++ b/src/main/resources/webapp/static/components/page/order/order.html
@@ -12,7 +12,7 @@
                 <ul class="mui-table-view mui-list">
                     <li class="mui-table-view-cell" v-repeat="o in order">
                         <h4>
-                            {{o.bus.name}} {{o.bus.destination}}
+                            {{o.bus.sn}} {{o.bus.destination}}
                         </h4>
                         <p>{{o.date}} {{o.bus.goff}}</p>
                         <h5 style="color: #000;">
