--- a/src/main/resources/webapp/static/components/page/search/result/result.html
+++ b/src/main/resources/webapp/static/components/page/search/result/result.html
@@ -11,15 +11,19 @@
             {{result.length}}/{{result.length}}车次
         </h5>
         <ul class="mui-table-view">
-            <li class="mui-table-view-cell" v-repeat="r in result">
+            <li class="mui-table-view-cell mui-media" v-repeat="r in result">
                 <a class="mui-navigate-right" v-on="click:selectBus(r.id,calendars[search.date].value)">
-                    <h4>
+                    <img style="max-width: 62px;height: 62px;" class="mui-media-object mui-pull-left" v-attr="src:r.src||'/admin/static/images/128.png'">
+                    <div class="mui-media-body">
                         {{r.name}} {{r.whither}}
-                    </h4>
-                    <p>{{r.date}}</p>
-                    <h5 style="color: #000">
-                        空座：{{r.void}} 预订：{{r.order}} 全部：{{r.void + r.order}}
-                    </h5>
+                        <p>
+                            {{r.date}}
+                        <h5 style="color: #000">
+                            空座：{{r.void}} 预订：{{r.order}} 全部：{{r.void + r.order}}
+                        </h5>
+                        </p>
+
+                    </div>
                 </a>
             </li>
         </ul>
