--- a/src/main/resources/webapp/static/components/page/whither/whither.html
+++ b/src/main/resources/webapp/static/components/page/whither/whither.html
@@ -1,4 +1,4 @@
-<div class="page-whither" v-transition="slideInRight">
+<div class="page-whither">
     <header class="mui-bar mui-bar-nav">
         <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" href="#search"></a>
         <h5 class="mui-title">
