--- a/src/main/resources/webapp/static/components/page/calendar/calendar.html
+++ b/src/main/resources/webapp/static/components/page/calendar/calendar.html
@@ -1,4 +1,4 @@
-<div class="page-calendar" v-transition="slideInRight" >
+<div class="page-calendar"  >
     <header class="mui-bar mui-bar-nav">
         <a class="mui-icon mui-icon-arrowleft mui-pull-left" href="#search"></a>
         <h5 class="mui-title">
