--- a/src/main/resources/webapp/static/components/page/bind/bind.html
+++ b/src/main/resources/webapp/static/components/page/bind/bind.html
@@ -3,7 +3,7 @@
     <h5 class="mui-title">
         用户绑定
     </h5>
-    <a class="mui-icon mui-icon-arrowleft mui-pull-left" href="#config"></a>
+    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" href="#config"></a>
 </header>
    <div class="mui-content">
 
