--- a/src/main/resources/webapp/static/components/page/company/company.html
+++ b/src/main/resources/webapp/static/components/page/company/company.html
@@ -4,7 +4,7 @@
             <h5 class="mui-title">
                 承包商订位
             </h5>
-            <a class="mui-pull-left mui-icon mui-icon-arrowleft" href="#service"></a>
+            <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" href="#service"></a>
         </header>
         <div class="mui-content">
             <ul class="mui-table-view mui-grid-view mui-grid-9">
