--- a/src/main/resources/webapp/static/components/page/search/result/result.html
+++ b/src/main/resources/webapp/static/components/page/search/result/result.html
@@ -1,6 +1,6 @@
 <div class="page-search-result" >
     <header class="mui-bar mui-bar-nav">
-        <a class="mui-icon mui-icon-arrowleft mui-pull-left"  href="#search"></a>
+        <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"  href="#search"></a>
         <h5 class="mui-title">
             查询结果
         </h5>
